--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -6,9 +6,16 @@
         - @image.errors.full_messages.each do |message|
           %li= message
 
-  = f.text_field :title
-  = f.text_field :tags
+  .field
+    = f.text_field :title
 
+  .field
+    = f.text_field :tags
+
+  .field
+    = f.text_field :source
+
+  .field
   = f.file_field :image
 
   .actions
