--- a/app/views/images/edit.html.haml
+++ b/app/views/images/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing image
+- content_for :body do
+  %h1 Editing image
 
-= render 'form'
+  = render "form"
 
-= link_to 'Show', @image
-\|
-= link_to 'Back', images_path
+  = link_to "Show", @image
+  \|
+  = link_to "Back", images_path
