remove bootstrap for semantic-ui
remove trestle for now seeing as i don't have a need for an admin just yet
add logo file
add draper because i thought i was going to need it, leaving it for now

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,14 @@
  *= require_tree .
  *= require_self
  */
-@import "bootstrap";
+@import "semantic-ui";
+
+@import url("//fonts.googleapis.com/css?family=Maven+Pro:300italic,400italic,700italic,400,300,700");
+
+.main.container {
+  margin-top: 7em;
+}
+
+.ui.header {
+  font-family: "Maven Pro", $font-family;
+}
