--- a/app/views/images/new.html.haml
+++ b/app/views/images/new.html.haml
@@ -1,6 +1,9 @@
+- content_for :page_title do
+  = @image.title
+
+= render "navbar"
+
 - content_for :body do
   %h1 New image
 
   = render "form"
-
-  = link_to "Back", images_path
