--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -1,2 +1,5 @@
 = render partial: "layouts/navbar"
-.container= content_for :body
+
+.ui.main.text.container
+  = semantic_flash
+  = content_for :body
