better interface for images and working turbolinks/semanticui/jquery/shit

--- a/app/views/images/edit.html.haml
+++ b/app/views/images/edit.html.haml
@@ -4,6 +4,9 @@
 = render "navbar"
 
 - content_for :body do
-  %h1 Editing image
+  .ui.grid.container
+    .row
+      %h1 Editing Image
 
-  = render "form"
+    .row
+      = render "form"
