--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -1,5 +1,5 @@
 = render partial: "layouts/navbar"
 
-.ui.main.text.container{ class: [  controller_name, action_name ] }
+.ui.main.text.container
   = semantic_flash
   = content_for :body
