--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,1 +1,1 @@
-= javascript_include_tag "application", "data-turbolinks-track": "reload"
+= javascript_include_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
