--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -5,14 +5,19 @@
       TransientBug
 
     = active_link_to "Home", home_path, class: "item"
-
-    - if signed_in?
-      = active_link_to "Images", images_path, class: "item"
+    = active_link_to "Images", images_path, class: "item"
 
     = content_for :navbar
 
     .right.menu
       = content_for :navbar_right
+
+      .ui.search.item
+        .ui.icon.input
+          = search_field_tag "q", "", class: "ui prompt", placeholder: "Search Images ...", aria: { label: "Search" }
+          %i.search.icon
+        .results
+
       - if signed_in?
         = link_to "Logout", logout_path, class: "item"
       - else
