--- a/app/views/images/new.html.haml
+++ b/app/views/images/new.html.haml
@@ -4,6 +4,9 @@
 = render "navbar"
 
 - content_for :body do
-  %h1 New image
+  .ui.grid.container
+    .row
+      %h1 New Image
 
-  = render "form"
+    .row
+      = render "form"
