--- a/app/views/images/_tags.html.haml
+++ b/app/views/images/_tags.html.haml
@@ -1,4 +1,4 @@
 .ui.tag.labels
   - tags.each do |tag|
     = link_to tag_images_path(tag) do
-      .ui.label= tag
+      .ui.label{ class: [color_for(tag)] }= tag
