--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -4,16 +4,20 @@
 = render "navbar"
 
 - content_for :body do
-  .ui.grid.container
+  .ui.fluid.grid.container
     .row
       %h1= @image.title
 
     .row
       = image_tag @image.image, class: "ui top attached centered image"
 
-      - if policy(@image).update?
-        .ui.bottom.attached.menu
+      .ui.bottom.attached.menu
+        - if policy(@image).update?
           = link_to "Edit", edit_image_path(@image), class: "item"
+
+        .right.menu
+          .ui.item
+            Updated: #{ @image.updated_at.to_date.to_s(:long) }
 
     .row
       = render partial: "tags", locals: { tags: @image.tags }
