--- a/app/views/images/_card.html.haml
+++ b/app/views/images/_card.html.haml
@@ -1,4 +1,7 @@
 .fluid.card
+  - if image.disabled?
+    .ui.red.ribbon.label Disabled
+
   = link_to image_path(image), class: "image" do
     = image_tag image.image
 
