--- a/app/views/images/_cards.html.haml
+++ b/app/views/images/_cards.html.haml
@@ -1,6 +1,7 @@
-.ui.equal.width.grid
-  .ui.cards
+.row
+  .ui.centered.cards
     - images.each do |image|
       = render partial: "card", locals: { image: image }
 
+.ui.centered.row
   = paginate images
