--- a/app/views/images/_form.html.haml
+++ b/app/views/images/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for image, html: { class: "ui form" } do |f|
+= form_for image, html: { class: "ui centered fluid form" } do |f|
   - if image.errors.any?
     .ui.message.error
       %h2= "#{ pluralize image.errors.count, "error" } prohibited this image from being saved:"
@@ -20,8 +20,8 @@
 
   .field
     .ui.toggle.checkbox
-      = f.label :disabled
       = f.check_box :disabled, aria: { describedby: "Disable Image" }
+      = f.label :disabled
 
   - if image.new_record?
     .field
