--- a/app/views/images/tag.html.haml
+++ b/app/views/images/tag.html.haml
@@ -4,11 +4,9 @@
 = render "navbar"
 
 - content_for :body do
-  .ui.fluid.grid.container
-    .row
+  .ui.fluid.grid
+    .ui.centered.row
       %h1
-        Images in Tag
         .ui.label.tag{ class: [color_for(params[:tag])] }= params[:tag]
 
-    .row
-      = render partial: "cards", locals: { images: @images }
+    = render partial: "cards", locals: { images: @images }
