--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -1,6 +1,6 @@
 = render partial: "layouts/navbar"
 
-.ui.main.text.container
+.ui.main.container
   = semantic_flash
 
-= content_for :body
+  = content_for :body
