working on responsive which is turning out awful

--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -4,7 +4,7 @@
 = render "navbar"
 
 - content_for :body do
-  .ui.fluid.grid
+  .ui.fluid.stackable.grid
     .ui.centered.row
       %h1 All Images
 
