--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,1 +1,34 @@
-= javascript_include_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+.ui.inverted.vertical.footer.segment
+  .ui.center.aligned.container
+    .ui.stackable.inverted.divided.grid
+      .eight.wide.column
+        %h4.ui.inverted.header All the things!
+        .ui.inverted.link.list
+          .item Home
+          .item Images
+          .item Search
+      -#.three.wide.column
+        -#%h4.ui.inverted.header Group 2
+        -#.ui.inverted.link.list
+          -#.item one
+          -#.item two
+          -#.item three
+      -#.three.wide.column
+        -#%h4.ui.inverted.header Group 3
+        -#.ui.inverted.link.list
+          -#.item one
+          -#.item two
+          -#.item three
+      .eight.wide.column
+        %h4.ui.inverted.header transientBug
+        %p Dedicated to being the personal storagemahjigger for these newfangled anima-motion stillframes called "gah-iffs"
+
+    .ui.inverted.section.divider
+
+    = image_tag "bug_logo.png", class: "ui centered mini image"
+
+    .ui.horizontal.inverted.small.divided.link.list
+      -#.item Site Map
+      .item Contact Us
+      -#.item Terms and Conditions
+      -#.item Privacy Policy
