--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,6 @@
   %body{ class: [  controller_name, action_name ] }
     = render partial: "layouts/body"
 
-  = render partial: "layouts/footer"
+    = render partial: "layouts/footer"
+
+  = javascript_include_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
