--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,25 @@
  */
 @import "semantic-ui";
 
-@import url("//fonts.googleapis.com/css?family=Maven+Pro:300italic,400italic,700italic,400,300,700");
+@import url("//fonts.googleapis.com/css?family=Maven+Pro:700,900");
+
+.header {
+  font-family: "Maven Pro", $font-family;
+}
 
 .main.container {
   margin-top: 5em;
 }
 
-.ui.header {
-  font-family: "Maven Pro", $font-family;
+.item.padder {
+  margin-top: 2em;
+}
+
+//.ui.menu .item img.logo {
+  //margin-right: 1.5em;
+//}
+
+.ui.footer.segment {
+  margin: 5em 0em 0em;
+  padding: 5em 0em;
 }
