--- a/app/views/images/search.html.haml
+++ b/app/views/images/search.html.haml
@@ -8,4 +8,11 @@
     .ui.centered.row
       %h1 Image Search Results
 
+    .ui.centered.row
+      .ui.search
+        .ui.icon.input
+          = form_tag search_images_path, method: :get do
+            = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search Images ...", aria: { label: "search" }
+          %i.search.icon
+
     = render partial: "cards", locals: { images: @images }
