--- a/app/views/images/tag.html.haml
+++ b/app/views/images/tag.html.haml
@@ -7,6 +7,6 @@
   .ui.fluid.grid
     .ui.centered.row
       %h1
-        .ui.label.tag{ class: [color_for(params[:tag])] }= params[:tag]
+        .ui.massive.label.tag{ class: [color_for(params[:tag])] }= params[:tag]
 
     = render partial: "cards", locals: { images: @images }
