redirect to gifs on not signed in root and some more links in footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,9 +29,9 @@
   margin-top: 2em;
 }
 
-//.ui.menu .item img.logo {
-  //margin-right: 1.5em;
-//}
+.ui.menu .item img.logo {
+  margin-right: 1.5em;
+}
 
 .ui.footer.segment {
   margin: 5em 0em 0em;
