--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,19 +11,20 @@
         %h4.ui.inverted.header All the Love!
         %p
           Made with
+        %p
           %i.heart.icon
-          in Colorado
-
+        %p
+          in Boulder, Colorado
 
       .three.wide.column
         %h4.ui.inverted.header All the Credits!
         .ui.inverted.link.list
           .item=link_to "Semantic UI", "https://semantic-ui.com/"
           .item= link_to "Rails 5.2", "https://github.com/rails/rails"
-          -#.item
-            -#= link_to "https://github.com" do
-              -#%i.github.icon
-                -#The codez
+          .item
+            = link_to "https://github.com/transientBug/transientbug-rails" do
+              %i.github.icon
+              The codez
 
       .seven.wide.column
         %h4.ui.inverted.header transientBug
