red hearts are red

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,7 +12,7 @@
         %p
           Made with
         %p
-          %i.heart.icon
+          %i.red.heart.icon
         %p
           in Boulder, Colorado
 
