--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -3,13 +3,13 @@
   %meta{ property: "og:url", content: request.original_url }
   %meta{ property: "og:title", content: @image.title }
   %meta{ property: "og:description", content: @image.tags.join(", ") }
-  %meta{ property: "og:image", content: (request.base_url + image_path(@image, format: :gif)) }
+  %meta{ property: "og:image", content: ("https://transientbug.ninja" + image_path(@image, format: :gif)) }
 
   %meta{ name: "twitter:card", content: "summary_large_image" }
   %meta{ name: "twitter:domain", content: "https://transientbug.ninja/" }
   %meta{ name: "twitter:title", content: @image.title }
   %meta{ name: "twitter:description", content: @image.tags.join(", ") }
-  %meta{ name: "twitter:image", content: (request.base_url + image_path(@image, format: :gif)) }
+  %meta{ name: "twitter:image", content: ("https://transientbug.ninja" + image_path(@image, format: :gif)) }
   %meta{ name: "twitter:url", content: request.original_url }
 
 - content_for :page_title do
