--- a/app/views/images/edit.html.haml
+++ b/app/views/images/edit.html.haml
@@ -9,7 +9,7 @@
       %h1 Editing Image
 
     .row
-      = image_tag @image.image, class: "ui top attached centered image"
+      = image_tag image_path(@image, format: :gif), class: "ui top attached centered image"
 
     .row
       = render partial: "form", locals: { image: @image }
