--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -4,6 +4,31 @@
 = render "navbar"
 
 - content_for :body do
-  .ui.fluid.stackable.grid
-    .ui.centered.row
-      %h1 All Bookmarks
+  .ui.row
+    %h1 Your Bookmarks
+
+  .ui.row
+    .ui.divider
+
+  .ui.row
+    .ui.very.relaxed.divided.list
+      - @bookmarks.each do |bookmark|
+        .item
+          %i.bookmark.icon
+          .content
+            = link_to bookmark.title, bookmark.uri_string, class: "item"
+            .description
+              = bookmark.description
+              - if bookmark.description.present?
+                %br
+
+              .ui.small.tag.labels
+                - bookmark.tags.each do |tag|
+                  = link_to tag_bookmarks_path(tag.label) do
+                    .ui.label{ class: [tag.color] }= tag.label
+
+              = bookmark.updated_at.to_date.to_s(:long)
+              |
+              = link_to "edit", edit_bookmark_path(bookmark)
+              |
+              = link_to "delete", bookmark_path(bookmark), method: :delete, data: { confirm: "really delete #{ bookmark.title }? REALLY?!" }
