--- a/app/views/bookmarks/edit.html.haml
+++ b/app/views/bookmarks/edit.html.haml
@@ -1,12 +1,11 @@
 - content_for :page_title do
-  Editing Bookmark #{ @bookmark.title }
+  Editing Bookmark "#{ @bookmark.title }"
 
 = render "navbar"
 
 - content_for :body do
-  .ui.fluid.grid.container
-    .row
-      %h1 Editing Bookmark
+  .ui.row
+    %h1 Editing Bookmark
 
-    .row
-      = render partial: "form", locals: { bookmark: @bookmark }
+  .ui.row
+    = render partial: "form", locals: { bookmark: @bookmark }
