--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -10,28 +10,4 @@
   .ui.row
     .ui.divider
 
-  .ui.row
-    .ui.very.relaxed.divided.list
-      - @bookmarks.each do |bookmark|
-        .item
-          %i.bookmark.icon
-          .content
-            .item
-              = link_to bookmark.title, bookmark.uri_string
-              = link_to bookmark_cache_path(bookmark) do
-                %i.archive.icon
-            .description
-              = bookmark.description
-              - if bookmark.description.present?
-                %br
-
-              .ui.small.tag.labels
-                - bookmark.tags.each do |tag|
-                  = link_to tag_bookmarks_path(tag.label) do
-                    .ui.label{ class: [tag.color] }= tag.label
-
-              = bookmark.updated_at.to_date.to_s(:long)
-              |
-              = link_to "edit", edit_bookmark_path(bookmark)
-              |
-              = link_to "delete", bookmark_path(bookmark), method: :delete, data: { confirm: "really delete #{ bookmark.title }? REALLY?!" }
+  = render partial: "bookmark_list", locals: { bookmarks: @bookmarks }
